--- a/Assignment 1/Assignment 1.tex
+++ b/Assignment 1/Assignment 1.tex
@@ -3,7 +3,13 @@
 \usepackage{setspace} \doublespacing
 \usepackage{hanging}
 
+\title{ENGINEER 4A03 Assignment 1}
+\author{Raeed Hassan}
+
 \begin{document}
+\maketitle
+\clearpage
+
 \begin{center}
 	\textbf{\underline{Memorandum}}
 \end{center}
