--- a/Assignment 1/Assignment 1.tex
+++ b/Assignment 1/Assignment 1.tex
@@ -2,6 +2,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{setspace} \doublespacing
 \usepackage{hanging}
+\usepackage{hyperref}
 
 \title{ENGINEER 4A03 Assignment 1}
 \author{Raeed Hassan}
@@ -20,7 +21,7 @@
 	\textbf{Re:}	& \textbf{McMaster Soils Case}\\
 \end{tabular}
 \\\par
-In Canadian tort law, as reaffirmed in \textit{Rankin's Garage \& Sales v. J.J.}, the principles for the Tort of Negligence are established based on the neighbour principle established by Donoghue v. Stevenson (Radocchia). The plaintiff must prove there is a relationship of proximity between the parties that should establish a \textit{prima facie} duty of care and must provide a sufficient factual basis that the harm caused was a reasonably foreseeable consequence of the actions by a defendant in a proximate relationship. This is the basis that will used to determine liability for the \textit{McMaster Soils Case}.
+In Canadian tort law, as reaffirmed in \textit{Rankin's Garage \& Sales v. J.J.}, the principles for the Tort of Negligence are established based on the neighbour principle established by Donoghue v. Stevenson (Radocchia). The primary principles are part of the \textit{Anns} test, as established by \textit{Cooper v. Hobart} (Supreme Court of Canada). The plaintiff must prove there is a relationship of proximity between the parties that should establish a \textit{prima facie} duty of care and must provide a sufficient factual basis that the harm caused was a reasonably foreseeable consequence of the actions by a defendant in a proximate relationship. This is the basis that will used to determine liability for the \textit{McMaster Soils Case}.
 
 \par
 \textbf{\underline{Relevant Parties}}\\
@@ -48,7 +49,11 @@ If this matter reaches courts, it is likely that the court and judge will apply 
 
 \clearpage 
 \noindent
-\textbf{\underline{References}}\\
-\hangpara{1em}{2}
-Radocchia, Joe. \textit{ENGINEER 4A03 POWER POINT SLIDES for October 17, 2022}. ENGINEER 4A03, 17 Oct. 2022. McMaster University, Hamilton. PowerPoint Presentation. 
+\textbf{\underline{Works Cited}}
+
+\begin{hangparas}{1em}{1}
+Radocchia, Joe. \textit{ENGINEER 4A03 POWER POINT SLIDES for October 17, 2022}. ENGINEER 4A03, 17 Oct. 2022. McMaster University, Hamilton. PowerPoint Presentation.
+
+Supreme Court of Canada. \textit{Cooper v. Hobart}. \textit{Supreme Court Judgements}. 16 Nov. 2001. \textit{Supreme Court of Canada}, \url{https://scc-csc.lexum.com/scc-csc/scc-csc/en/item/1920/index.do}
+\end{hangparas}
 \end{document}
