--- a/Assignment 1/Assignment 1.tex
+++ b/Assignment 1/Assignment 1.tex
@@ -38,14 +38,14 @@ In the given fact scenario, it is likely that Mac will be able to establish a pr
 \textbf{\underline{Foreseeable Consequences}}\\
 \indent
 Since it is believed that Mac will be able to establish a \textit{prima facie} duty of care with multiple parties in a potential case, we can continue to discuss if there are sufficient facts to establish that the harm required by Mac was a reasonably foreseeable. To establish this, we will refer to second to fourth parts of the four part objective test to succeed a claim in negligence. In this test, Mac will be the plaintiff, and Saul and Kim will be defendants.\par
-We must ask ``[d]id the defendant breach the required standard of care expected of a reasonable person?" (Radocchia). In the given scenario, it can be argued the expected standard of care from the defendants is to provide the relevant information to determine if the library can be built safely. Saul failed this expectation when he failed to relay the expert advice he received from Kim. Kim failed this expectation when he failed to raise concern as an engineer and expert when Saul attempted to go ahead with the design of the library without doing sufficient soil testing. As both defendants are believed to have breached the required standard of care, we can proceed to the next test.\par
+We must ask ``[d]id the defendant breach the required standard of care expected of a reasonable person?" (Radocchia). In the given scenario, it can be argued the expected standard of care from the defendants is to provide the relevant information to determine if the library can be built safely. Saul failed this expectation when he failed to relay the expert advice he received from Kim. Kim failed this expectation when he failed to raise concern as an engineer and expert when Saul attempted to go ahead with the design of the library without doing sufficient soil testing. A similar situation occurred in \textit{Welcon v. South River}, where Welcon was successfully awarded for breach of duties by the town's engineering consultant (Court of Appeal of Newfoundland and Labrador). The differing detail in this fact scenario is the cost of damages can be easily measured as the expenses for extensive remedial foundation, for which the judge in the Welcon case would have awarded if it was possible to measure. As both defendants are believed to have breached the required standard of care, we can proceed to the next test.\par
 We must determine if the victim (Mac) suffered any harm. In this scenario, Mac had to pay additional expenses for extensive remedial foundation work to correct the settlement problems, suffering financial harm. As Mac is believed to have suffered harm, we can proceed to the final test.\par
 As we believe all previous tests have been passed, we can proceed to the final test of determining if the defendant's actions cause the harm to the victim, or if their actions can be disconnected from the harm. In this case, the financial harm inflicted on Mac is a result of the actions of Saul and Kim, as Mac was relying on the expert advice of Saul and Kim for the safe and stable construction of the new library and the defendants in this case failed to provide them with adequate information for Mac to work with.
 
 \par
 \textbf{\underline{Likely Court Proceedings and Outcome}}\\
 \indent
-If this matter reaches courts, it is likely that the court and judge will apply the same established four part objective test to determine negligence. The court would likely award damages to Mac that will at least cover the cost for extensive remedial foundation work that was performed on the new library. Saul and Kim would be found primarily liable for the Tort of Negligence and find FES vicariously liable for the actions of their employee Kim. 
+If this matter reaches courts, it is likely that the court and judge will apply the same established four part objective test to determine negligence. The court would likely award damages to Mac that will at least cover the cost for extensive remedial foundation work that was performed on the new library, as the believed damages were previously awarded in \textit{Welcon v. South River} (Court of Appeal of Newfoundland and Labrador). Saul and Kim would be found primarily liable for the Tort of Negligence and find FES vicariously liable for the actions of their employee Kim.
 
 \clearpage 
 \noindent
@@ -55,5 +55,7 @@ If this matter reaches courts, it is likely that the court and judge will apply 
 Radocchia, Joe. \textit{ENGINEER 4A03 POWER POINT SLIDES for October 17, 2022}. ENGINEER 4A03, 17 Oct. 2022. McMaster University, Hamilton. PowerPoint Presentation.
 
 Supreme Court of Canada. \textit{Cooper v. Hobart}. \textit{Supreme Court Judgements}. 16 Nov. 2001. \textit{Supreme Court of Canada}, \url{https://scc-csc.lexum.com/scc-csc/scc-csc/en/item/1920/index.do}
+
+Court of Appeal of Newfoundland and Labrador. \textit{Welcon (1976) Limited v. South River (Town)}. 21 Oct. 2009. \textit{CanLII} \url{https://canlii.ca/t/2694l}
 \end{hangparas}
 \end{document}
