--- a/Assignment 2/Assignment 2.tex
+++ b/Assignment 2/Assignment 2.tex
@@ -11,7 +11,7 @@
 \maketitle
 \clearpage
 
-\section*{Fact Scenario A}
+\section*{Fact Scenario B}
 \subsection*{Ethical Issues}
 There is a conflict on interest. Lois was hired to do a job for the local developer, Lex Luthor Inc., while representing the client, the Town of Smallville. Lois has additionally failed to inform both of her employees in this scenario, Lex Luthor Inc. and the Town of Smallville, of the conflict of interest.
 
