--- a/Assignment 2/Assignment 2.tex
+++ b/Assignment 2/Assignment 2.tex
@@ -11,7 +11,7 @@
 \maketitle
 \clearpage
 
-\section*{Fact Scenario B}
+\section*{Fact Scenario A}
 \subsection*{Ethical Issues}
 There is a conflict on interest. Lois was hired to do a job for the local developer, Lex Luthor Inc., while representing the client, the Town of Smallville. Lois has additionally failed to inform both of her employees in this scenario, Lex Luthor Inc. and the Town of Smallville, of the conflict of interest.
 
@@ -33,13 +33,13 @@ The following Codes of Ethics apply to this fact scenario:
 \subsection*{Decision Making Options and Solutions}
 Possible decision making options and solutions that were available to Lois include:
 \begin{enumerate}
-	\item Inform both parties (Town of Smallville and Lex Luthor Inc.) of the conflict of interest and allow them to come to a resolution for this situation.
-	\item Lois should not have accepted the job by Lex Luthor Inc. due to the conflict of interest
-	\item Lois should have abstained from the town council vote due to the conflict of interest 
+	\item Inform both parties (Town of Smallville and Lex Luthor Inc.) of the conflict of interest and allow them to come to a resolution for this situation. This would address any ethical issues that arise due to violating Rules of Professional Misconduct and Codes of Ethics pertaining to avoidance or disclosure of interest.
+	\item Lois should not have accepted the job by Lex Luthor Inc. due to the conflict of interest. This would address any ethical issues that arise due to violating Rules of Professional Misconduct and Codes of Ethics pertaining to avoidance or disclosure of interest.
+	\item Lois should have abstained from the town council vote due to the conflict of interest. This would address any ethical issues that arise due to violating Rules of Professional Misconduct and Codes of Ethics pertaining to avoidance or disclosure of interest.
 \end{enumerate}
-\clearpage
+% \clearpage
 
-\section*{Fact Scenario A}
+\section*{Fact Scenario B}
 \subsection*{Ethical Issues}
 As an engineer, you should have reported to your employer/client about this safety issue first instead of going to the designer. As an engineer, you reviewed another engineer's work that is employed by the same client. The chief engineer at Delta Designs did not verify concerns with their drawings.
 
@@ -47,7 +47,7 @@ As an engineer, you should have reported to your employer/client about this safe
 The following Rules of Professional Misconduct apply to this fact scenario:
 \begin{description}
 	\item[72.2.a] \textbf{negligence.} The chief engineer at Delta Designs displays negligence by refusing to review concerns about the safety and specifications of the gearbox.
-	\item[72.2.b] \textbf{failure to make reasonable provision for the safeguarding of life, health or property of a person who may be affected by the work for which the practitioner is responsible.} The chief engineer at Delta Designs refuses to make reasonable provision when reasonable concerns about their work is raised
+	\item[72.2.b] \textbf{failure to make reasonable provision for the safeguarding of life, health or property of a person who may be affected by the work for which the practitioner is responsible.} The chief engineer at Delta Designs refuses to make reasonable provision when reasonable concerns about their work is raised.
 	\item[72.2.f] \textbf{failure of a practitioner to present clearly to the practitioner's employer the consequences to be expected from a deviation proposed in work, if the professional engineering judgment of the practitioner is overruled by non-technical authority in cases where the practitioner is responsible for the technical adequacy of professional engineering work.} You failed to inform your employer/client about the concerns about the design.
 \end{description}
 
@@ -60,7 +60,7 @@ The following Codes of Ethics apply to this fact scenario:
 \subsection*{Decision Making Options and Solutions}
 Possible decision making options and solutions that were available to you include:
 \begin{enumerate}
-	\item Do not directly reach out to Delta Designs and instead inform your client of the situation first, and wait to hear back from your client on what to do. In the meantime, do not manufacture the gearboxes due to the potential safety risk.
+	\item Do not directly reach out to Delta Designs and instead inform your client of the situation first, and wait to hear back from your client on what to do. In the meantime, do not manufacture the gearboxes due to the potential safety risk. This would address any ethical issues that arise due to violating Rules of Professional Misconduct and Codes of Ethics which require you to inform your client/employer about deviations in work, and for violations for reviewing another practitioner's work without their knowledge. Informing your client first is also the recommended under the Engineer's Duty to Report guidelines in Professional Engineers Ontario's Professional Engineering Practice Guideline.
 \end{enumerate}
 Possible decision making options and solutions that were available to the chief engineer at Delta Designs include:
 \begin{enumerate}
@@ -68,15 +68,19 @@ Possible decision making options and solutions that were available to the chief 
 \end{enumerate}
 \clearpage
 
-% \clearpage 
-% \noindent
-% \textbf{\underline{Works Cited}}
+\clearpage 
+\noindent
+\textbf{\underline{Works Cited}}
 
-% \begin{hangparas}{1em}{1}
+\begin{hangparas}{1em}{1}
+Professional Engineers Act. R.R.O. 1990, Reg. 941.
+
+Professional Engineers Ontario. \textit{Professional Engineering Practice Guideline}. November 2020. \textit{Professional Engineers Ontario}, \url{https://www.peo.on.ca/sites/default/files/2020-12/PEPGuideline_Nov2020.pdf}
+
 % Radocchia, Joe. \textit{ENGINEER 4A03 POWER POINT SLIDES for October 17, 2022}. ENGINEER 4A03, 17 Oct. 2022. McMaster University, Hamilton. PowerPoint Presentation.
 
 % Supreme Court of Canada. \textit{Cooper v. Hobart}. \textit{Supreme Court Judgements}. 16 Nov. 2001. \textit{Supreme Court of Canada}, \url{https://scc-csc.lexum.com/scc-csc/scc-csc/en/item/1920/index.do}
 
 % Court of Appeal of Newfoundland and Labrador. \textit{Welcon (1976) Limited v. South River (Town)}. 21 Oct. 2009. \textit{CanLII} \url{https://canlii.ca/t/2694l}
-% \end{hangparas}
+\end{hangparas}
 \end{document}
